statement can be given only once

--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -56,7 +56,7 @@
            id="statement-submit"
            type="submit"
            class="positive">
-          <span data-bind="ltext: submitLtext"></span>
+          <span data-bind="ltext: 'statement.submit'"></span>
           <i class="wait spin lupicon-refresh"></i>
         </button>
       </form>
