--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -49,23 +49,24 @@
 
               <!-- Actions: -->
             <div class="application_actions stacked" data-test-id="bulletin-actions">
-              <!-- ko if: authenticated-->
-              <button class="function julkipano"
-                      data-bind="click: scrollToCommenting"
-                      data-test-id="comment-bulletin">
-                  <i class="lupicon-comment"></i>
-                  <span data-bind="ltext: 'bulletin.actions.comment'"></span>
-              </button>
+              <!-- ko if: showCommenting -->
+                <!-- ko if: authenticated-->
+                <button class="function julkipano"
+                        data-bind="click: scrollToCommenting"
+                        data-test-id="comment-bulletin">
+                    <i class="lupicon-comment"></i>
+                    <span data-bind="ltext: 'bulletin.actions.comment'"></span>
+                </button>
+                <!-- /ko -->
+                <!-- ko if: !authenticated() -->
+                <button class="function julkipano"
+                        data-bind="click: clickAuthenticationButton"
+                        data-test-id="comment-bulletin">
+                    <i class="lupicon-comment"></i>
+                    <span data-bind="ltext: 'bulletin.actions.comment'"></span>
+                </button>
+                <!-- /ko -->
               <!-- /ko -->
-              <!-- ko if: !authenticated() -->
-              <button class="function julkipano"
-                      data-bind="click: clickAuthenticationButton"
-                      data-test-id="comment-bulletin">
-                  <i class="lupicon-comment"></i>
-                  <span data-bind="ltext: 'bulletin.actions.comment'"></span>
-              </button>
-              <!-- /ko -->
-
 <!--               <button class="function julkipano"
                       data-bind=""
                       data-test-id="print-bulletin">
@@ -84,6 +85,14 @@
           <!-- Tabs: -->
           <div class="tabs-container">
             <ul class="tabs" id="bulletin-tabs">
+              <!-- ko if: showInstructionsTab -->
+              <li data-bind="css: {'active': selectedTab() === 'instructions'}">
+                <a data-bind="click: _.partial(openTab, 'instructions')" href="#" class="link-btn-julkipano" data-test-id="bulletin-open-instructions-tab">
+                  <span data-bind="visible: inProclaimedState, ltext: 'application.tabInstructions.proclaimed'"></span>
+                  <span data-bind="visible: inVerdictGivenState() || inFinalState() , ltext: 'application.tabInstructions.verdictGiven'"></span>
+                </a>
+              </li>
+              <!-- /ko -->
               <!-- ko if: showInfoTab -->
               <li data-bind="css: {'active': selectedTab() === 'info'}">
                   <a data-bind="click: _.partial(openTab, 'info')" href="#" class="link-btn-julkipano" data-test-id="bulletin-open-info-tab">
@@ -117,7 +126,7 @@
         </div>
       </div>
 
-      <!-- ko if: canCommentCurrentBulletin -->
+      <!-- ko if: showCommenting -->
         <!-- ko if: authenticated -->
         <div data-bind="component: { name: 'bulletin-comment',
                                      params: { bulletin: $data,
@@ -132,7 +141,6 @@
         </div>
         <!-- /ko -->
       <!-- /ko -->
-
     </script>
   </section>
 </body>
