--- a/resources/private/ui-components/neighbors/neighbors-owners-dialog-template.html
+++ b/resources/private/ui-components/neighbors/neighbors-owners-dialog-template.html
@@ -8,21 +8,21 @@
           <h2 data-bind="text: loc(['neighbors.owners.status', status()])"></h2>
           <img data-bind="visible: isSearching()" src="/img/ajax-loader-16.gif" alt=""/>
         </div>
-        <div data-bind="foreach: propertyIds">
-          <h3 data-bind="">
+        <div data-bind="foreach: ownersGroups">
+          <h3 data-bind="if: $data.owners.length">
             <span data-bind="ltext: 'neighbors.edit.propertyId'"></span>:
-            <span data-bind="propertyId: $data"></span>
+            <span data-bind="propertyId: $data.owners[0].propertyId"></span>
           </h3>
-          <table class="application-neighbors property-owners">
+          <table class="application-neighbors property-owners" data-bind="if: $data.owners.length">
             <thead>
               <tr>
-                <th><input class="form-input" type="checkbox" data-test-id="select-all-owners" data-bind="checked: $parent.ownersGroup" /></th>
+                <th><input class="form-input" type="checkbox" data-test-id="select-all-owners" data-bind="checked: $data.ownersGroup" /></th>
                 <th data-bind="ltext: 'neighbors.owner'"></th>
                 <th data-bind="ltext: 'neighbors.owner.address'"></th>
                 <th data-bind="ltext: 'neighbors.owner.type'"></th>
               </tr>
             </thead>
-            <tbody data-bind="foreach: {data: $parent.owners, afterRender: function() {$(window).trigger('resize');}}">
+            <tbody data-bind="foreach: {data: $data.owners, afterRender: function() {$(window).trigger('resize');}}">
               <tr>
                 <td>
                   <input class="form-input" type="checkbox" data-bind="value: $index, checked: selected, attr: {'data-test-id' : 'select-owner-' + $index()}" />
