Added help text

--- a/resources/private/neighbors/neighbors.html
+++ b/resources/private/neighbors/neighbors.html
@@ -10,6 +10,11 @@
         <span data-bind="ltext: 'neighbors.areas.loading'"></span>
       </span>
 
+      <div class="tab-content" style="margin-top: 5px">
+      <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'"></h1>
+      <span data-bind="component: {name: 'help-toggle', params: {show: true, lhtml: ['help.neighbors.map']}}"></span>
+      </div>
+
       <table class="application-neighbors"  data-bind="if: lupapisteApp.models.rootVMO.currentPage() === 'neighbors'">
         <thead>
           <tr>
