--- a/resources/private/neighbors/neighbors.html
+++ b/resources/private/neighbors/neighbors.html
@@ -12,7 +12,7 @@
 
       <div class="tab-content" style="margin-top: 5px">
       <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'"></h1>
-      <span data-bind="component: {name: 'help-toggle', params: {show: true, lhtml: ['help.neighbors.map']}}"></span>
+      <span data-bind="component: {name: 'help-toggle', params: {show: true, lhtml: ['help.neighbors.map.p1', 'help.neighbors.map.p2']}}"></span>
       </div>
 
       <table class="application-neighbors"  data-bind="if: lupapisteApp.models.rootVMO.currentPage() === 'neighbors'">
