--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -122,17 +122,17 @@
                   <tbody data-bind="foreach: $data.statements()">
                       <tr class="statement-row">
                           <td>
-                              <span data-bind="if: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
+                              <span data-bind="if: status && status() || $root.authorization.ok('should-see-unsubmitted-statements')">
                                   <a href="#" data-bind="text: person.text, click: $component.openStatement, attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
                               </span>
-                              <span data-bind="ifnot: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
+                              <span data-bind="ifnot: status && status() || $root.authorization.ok('should-see-unsubmitted-statements')">
                                   <span data-bind="text: person.text, attr: {'data-test-id' : 'open-statement-' + $index()}"></span>
                               </span>
                           </td>
                           <td data-bind="text: person.name"></td>
                           <td data-bind="dateString: requested"></td>
-                          <td data-bind="dateString: given"></td>
-                          <td data-bind="text: status() && loc(['statement', status()]), attr: {'data-test-name' : person.name}"></td>
+                          <td data-bind="dateString: $data.given"></td>
+                          <td data-bind="text: status && status() && loc(['statement', status()]), attr: {'data-test-name' : person.name}"></td>
                       </tr>
                   </tbody>
               </table>
