--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -75,7 +75,7 @@
                 <th data-bind="ltext: 'application.attachmentFile'">Tiedosto</th>
                 <th data-bind="ltext: 'application.attachmentEditDate'">Muokattu</th>
                 <th data-bind="ltext: 'attachment.actions'">Toiminnot</th>
-                <th></th>
+                <th data-bind="ltext: 'remove'"></th>
               </tr>
             </thead>
             <tbody data-bind="foreach: attachments">
@@ -91,10 +91,11 @@
                 </td>
                 <td>
                 </td>
-                <td><a data-bind="ltext: 'remove',
-                                  click: _.partial($root.attachmentsModel.deleteAttachment, $parent.id),
+                <td><a data-bind="click: _.partial($root.attachmentsModel.deleteAttachment, $parent.id),
                                   visible: $root.attachmentsModel.canDeleteAttachment($parent),
-                                  enable: $root.attachmentsModel.canDeleteAttachment($parent)"></a></td>
+                                  enable: $root.attachmentsModel.canDeleteAttachment($parent),
+                                  attr: {'data-test-id': 'removeStatementAttachmet'}">
+                      <i class="lupicon-remove primary"></i></a></td>
               </tr>
             </tbody>
           </table>
