show old password as password field

--- a/resources/private/mypage/mypage.html
+++ b/resources/private/mypage/mypage.html
@@ -208,7 +208,7 @@
             <div class="form-grid">
               <div class="row">
                 <div class="col-1"
-                     data-bind="component: {name: 'text-field',
+                     data-bind="component: {name: 'password-field',
                                             params: {value: oldPassword,
                                                      id: 'oldPassword',
                                                      lLabel: 'userinfo.oldPassword'}}"></div>
