--- a/resources/private/neighbors/neighbors.html
+++ b/resources/private/neighbors/neighbors.html
@@ -10,8 +10,8 @@
         <span data-bind="ltext: 'neighbors.areas.loading'"></span>
       </span>
 
-      <div style="margin-top: 5px">
-      <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'" style="float:left"></h1>
+      <div style="margin-top: 5px" >
+      <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'" style="float:left; line-height: normal"></h1>
       <span data-bind="component: {name: 'help-toggle', params: {show: true, lhtml: ['help.neighbors.map.p1', 'help.neighbors.map.p2']}}"></span>
       </div>
 
