require proclamation and verdict given text on UI + fix tests

--- a/resources/private/ui-components/bulletin/publish-bulletin/edit-verdict-given-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/edit-verdict-given-template.html
@@ -31,7 +31,9 @@
         <div data-bind="component: {name: 'textarea-field',
                                     params: {value: verdictGivenText,
                                              lPlaceholder: 'bulletin.appeal.text.placeholder',
-                                             lLabel: 'bulletin.appeal.text.label'}}"></div>
+                                             lLabel: 'bulletin.appeal.text.label',
+                                             required: true,
+                                             id: 'verdictGivenText'}}"></div>
       </div>
     </div>
   </div>
