--- a/resources/private/ui-components/bulletin/publish-bulletin/edit-proclaimed-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/edit-proclaimed-template.html
@@ -23,7 +23,9 @@
         <div data-bind="component: {name: 'textarea-field',
                                     params: {value: proclamationText,
                                              lPlaceholder: 'bulletin.proclamation.text.placeholder',
-                                             lLabel: 'bulletin.proclamation.text'}}"></div>
+                                             lLabel: 'bulletin.proclamation.text',
+                                             required: true,
+                                             id: 'proclamationText'}}"></div>
       </div>
     </div>
   </div>
