--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -172,8 +172,7 @@
                     <input type="checkbox" id="attachment-is-verdict-attachment" class="form-input" data-test-id="is-verdict-attachment"
                            data-bind="checked: isVerdictAttachment, enable: $root.authorization.ok('set-attachments-as-verdict-attachment')"/>
                   </div>
-                  <!-- ko if: features.enabled('attachment-visibility') -->
-                  <div class="clear" data-bind="css: {'feature': features.enabled('attachment-visibility')}">
+                  <div class="clear">
                     <h3 class="left" data-bind="ltext: 'attachment.visibility'"></h3>
                     <span data-bind="component: {name: 'help-toggle',
                                                  params: {lhtml: 'help.attachment.visibility'}}"></span>
@@ -183,7 +182,6 @@
                                        value: visibility,
                                        enable: $root.authorization.ok('set-attachment-visibility') && editable"/>
                   </div>
-                  <!-- /ko -->
                   <div data-bind="if: features.enabled('arkistointi') && latestVersion">
                     <div class="feature archive-valid" data-bind="with: latestVersion">
                       <div>
