--- a/resources/private/bulletins/application-bulletin/tabs/instructions/bulletin-instructions-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/instructions/bulletin-instructions-tab-template.html
@@ -4,10 +4,10 @@
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="bulletin-instructions-tab-template">
       <!-- ko if: proclaimedText -->
-      <p data-bind="text: proclaimedText"></p>
+      <pre data-bind="text: proclaimedText"></pre>
       <!-- /ko -->
       <!-- ko if: verdictGivenText -->
-      <p data-bind="text: verdictGivenText"></p>
+      <pre data-bind="text: verdictGivenText"></pre>
       <!-- /ko -->
     </script>
   </section>
