Municipality maps no longer behind a feature flag.

--- a/resources/private/ui-components/municipality-maps/municipality-maps-template.html
+++ b/resources/private/ui-components/municipality-maps/municipality-maps-template.html
@@ -3,7 +3,7 @@
   <body>
     <section class="page container">
       <script type="text/x-jquery-tmpl" id="municipality-maps-template">
-        <div data-bind="if: features.enabled( 'municipality-maps')" class="feature">
+        <div>
           <h2 data-bind="ltext: 'auth-admin.municipality-maps.title'"></h2>
           <div class="munimaps">
             <div data-bind="component: {name: 'municipality-maps-server',
