--- a/resources/private/ui-components/input/textarea-field-template.html
+++ b/resources/private/ui-components/input/textarea-field-template.html
@@ -6,10 +6,10 @@
       <div class="col--vertical">
         <label data-bind="text: label, attr: {'for': id}, css: {'required': required}, visible: label"></label>
         <textarea data-bind="textInput: value, attr: {placeholder: placeholder, id: id, name: id, 'data-test-id': id},
+                             attr: {maxlength: maxlength},
                              hasFocus: isSelected,
                              css: {required: required && !value()},
-                             disable: disable"
-                  maxlength="5000"/>
+                             disable: disable"/>
       </div>
     </script>
   </section>
