show comment formatted

--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
@@ -44,7 +44,7 @@
       </div>
       <!-- /ko -->
       <div>
-        <span data-bind="text: comment"></span>
+        <pre data-bind="text: comment"></pre>
       </div>
     </div>
   </div>
