--- a/resources/private/ui-components/bulletin/publish-bulletin/edit-verdict-given-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/edit-verdict-given-template.html
@@ -31,7 +31,7 @@
         <div data-bind="component: {name: 'textarea-field',
                                     params: {value: verdictGivenText,
                                              lPlaceholder: 'bulletin.appeal.text.placeholder',
-                                             lLabel: 'bulletin.appeal.text.label',
+                                             lLabel: 'application.tabInstructions.verdictGiven',
                                              required: true,
                                              id: 'verdictGivenText'}}"></div>
       </div>
