--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -25,6 +25,14 @@
             <p id="choose-statement-givers-title" data-bind="ltext: 'application-choose-statement-givers'"></p>
 
             <table class="table table-striped" data-test-id="table-application-statements-givers">
+                <thead>
+                      <tr>
+                          <th></th>
+                          <th data-bind="ltext: 'application.statement.desc'"></th>
+                          <th data-bind="ltext: 'auth-admin.statement-person.name'"></th>
+                          <th data-bind="ltext: 'userinfo.email'"></th>
+                      </tr>
+                  </thead>
                 <tbody data-bind="foreach: combinedData">
                     <tr class="statement-giver-row">
                         <td>
