--- a/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
+++ b/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
@@ -22,7 +22,10 @@
             <td data-bind="ltext: $data.type"></td>
             <td data-bind="text: $data.applicant"></td>
             <td data-bind="dateTimeString: $data.date"></td>
-            <td data-bind="dateTimeString: $data.proclamationEndsAt"></td>
+            <td>
+              <div data-bind="text: $data.commentingType"></div>
+              <div data-bind="text: $data.commentingEndsAt"></div>
+            </td>
           </tr>
         </tbody>
       </table>
