adjust huoneistot test by adding test-ids and fixing xpaths

--- a/resources/private/ui-components/docgen/button/docgen-button-template.html
+++ b/resources/private/ui-components/docgen/button/docgen-button-template.html
@@ -3,7 +3,7 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="docgen-button-template">
-        <button data-bind="attr: { 'id': id, 'class': className },
+        <button data-bind="attr: { 'id': id, 'class': className, 'data-test-id': testId },
                            click: clickFn">
             <!-- ko if: icon -->
             <i data-bind="attr: { 'class': icon }"></i>
