--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -259,6 +259,12 @@
                                     <span data-bind="ltext: 'application.refreshKTJ'"></span>
                                 </button>
                                 <button class="function"
+                                        data-bind="click: findOwners, visible: $root.authorization.ok('application-property-owners'), enable: !processing() && $root.authorization.ok('application-property-owners')"
+                                        data-test-id="application-property-owners-btn">
+                                    <i class="lupicon-search"></i>
+                                    <span data-bind="ltext: 'application.find-owners'"></span>
+                                </button>
+                                <button class="function"
                                         data-bind="click: resetIndicators, visible: $root.authorization.ok('mark-everything-seen'), enable: !processing() && $root.authorization.ok('mark-everything-seen')"
                                         data-test-id="application-mark-everything-seen-btn">
                                     <i class="lupicon-eye"></i>
