--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -122,13 +122,16 @@
                           <th data-bind="ltext: 'application.statement.maaraaika'"></th>
                           <th data-bind="ltext: 'application.statement.given'"></th>
                           <th data-bind="ltext: 'application.statement.status'"></th>
+                          <!-- ko if: $root.authorization.ok('delete-statement') -->
+                            <th data-bind="ltext: 'remove'"></th>
+                          <!-- /ko -->
                       </tr>
                   </thead>
                   <tbody data-bind="foreach: $data.statements()">
                       <tr class="statement-row">
                           <td>
                               <span data-bind="if: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
-                                  <a href="#" data-bind="text: person.text, click: $component.openStatement, attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
+                                  <a href="#" data-bind="text: person.text, click: $component.statementActions.openStatement, attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
                               </span>
                               <span data-bind="ifnot: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
                                   <span data-bind="text: person.text, attr: {'data-test-id' : 'open-statement-' + $index()}"></span>
@@ -139,6 +142,17 @@
                           <td data-bind="dateString: $data.dueDate"></td>
                           <td data-bind="dateString: given"></td>
                           <td data-bind="text: status() && loc(['statement', status()]), attr: {'data-test-name' : person.name}"></td>
+                          <!-- ko if: $root.authorization.ok('delete-statement') -->
+                            <td>
+                              <span data-bind="click: $component.statementActions.openDeleteDialog,
+                                               clickBubble: false,
+                                               visible: $root.authorization.ok('delete-statement'),
+                                               enable: $root.authorization.ok('delete-statement'),
+                                               attr: {'class': 'lupicon-remove primary',
+                                                      'title': loc('statement.delete'),
+                                                      'data-test-id': 'delete-statement-' + $index()}"></span>
+                            </td>
+                          <!-- /ko -->
                       </tr>
                   </tbody>
               </table>
