Hide submit button, show ok button if the dialog is readonly

--- a/resources/private/ui-components/neighbors/neighbors-owners-dialog-template.html
+++ b/resources/private/ui-components/neighbors/neighbors-owners-dialog-template.html
@@ -56,11 +56,16 @@
           </table>
         </div>
       </div>
+      <!-- ko ifnot: $component.readonly -->
       <div data-bind="component: {name: 'submit-button-group',
                                   params: { isSubmitVisible: true,
                                             isSubmitEnabled: isSubmitEnabled,
                                             submit: addSelectedOwners,
                                             lSubmitTitle: 'save'}}"></div>
+      <!-- /ko -->
+      <!-- ko if: $component.readonly -->
+      <div data-bind="component: {name: 'ok-button-group'}"></div>
+      <!-- /ko -->
     </script>
   </section>
 </body>
