--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -11,7 +11,13 @@
                          name: 'help-toggle',
                          params: {lhtml: 'help.' + application.permitType() + '.statementsDesc'}
                          }"></span>
-        <div data-bind="template: {name: 'statements-table-template', data: {statements: application.statements, localisationKeys: {missing: 'application.statement.missing'}}}"></div>
+        <div id="application-statements-table"
+             data-bind="component: {name: 'statements-table',
+                                    params: {applicationId: application.id,
+                                             statements: application.statements,
+                                             authModel: $root.authorization,
+                                             localisationKeys: {missing: 'application.statement.missing'},
+                                             openStatementPageOnStatementDelete: false}}"></div>
         <button data-bind="click: toggleInviteSection,
                            visible: authorization.ok('request-for-statement') && !showInviteSection()"
                 class="positive modal"
@@ -105,59 +111,6 @@
       </div>
 
     </script>
-
-
-    <script type="text/x-jquery-tmpl" id="statements-table-template">
-          <div data-bind="ifnot: $data.statements && statements().length > 0">
-              <p data-bind="ltext: $data.localisationKeys.missing" data-test-id="application-no-statements"></p>
-          </div>
-
-          <div data-bind="if: $data.statements && statements().length > 0">
-              <table class="table table-striped tablesorter" data-test-id="application-statements">
-                  <thead>
-                      <tr>
-                          <th data-bind="ltext: 'application.statement.desc'"></th>
-                          <th data-bind="ltext: 'auth-admin.statement-person.name'"></th>
-                          <th data-bind="ltext: 'application.statement.requested'"></th>
-                          <th data-bind="ltext: 'application.statement.maaraaika'"></th>
-                          <th data-bind="ltext: 'application.statement.given'"></th>
-                          <th data-bind="ltext: 'application.statement.status'"></th>
-                          <!-- ko if: $root.authorization.ok('delete-statement') -->
-                            <th data-bind="ltext: 'remove'"></th>
-                          <!-- /ko -->
-                      </tr>
-                  </thead>
-                  <tbody data-bind="foreach: $data.statements()">
-                      <tr class="statement-row">
-                          <td>
-                              <span data-bind="if: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
-                                  <a href="#" data-bind="text: person.text, click: $component.statementActions.openStatement, attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
-                              </span>
-                              <span data-bind="ifnot: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
-                                  <span data-bind="text: person.text, attr: {'data-test-id' : 'open-statement-' + $index()}"></span>
-                              </span>
-                          </td>
-                          <td data-bind="text: person.name"></td>
-                          <td data-bind="dateString: requested"></td>
-                          <td data-bind="dateString: $data.dueDate"></td>
-                          <td data-bind="dateString: given"></td>
-                          <td data-bind="text: status() && loc(['statement', status()]), attr: {'data-test-name' : person.name}"></td>
-                          <!-- ko if: $root.authorization.ok('delete-statement') -->
-                            <td>
-                              <span data-bind="click: $component.statementActions.openDeleteDialog,
-                                               clickBubble: false,
-                                               visible: $root.authorization.ok('delete-statement'),
-                                               enable: $root.authorization.ok('delete-statement'),
-                                               attr: {'class': 'lupicon-remove primary',
-                                                      'title': loc('statement.delete'),
-                                                      'data-test-id': 'delete-statement-' + $index()}"></span>
-                            </td>
-                          <!-- /ko -->
-                      </tr>
-                  </tbody>
-              </table>
-          </div>
-      </script>
 
       <script type="text/x-jquery-tmpl" id="neighbors-table-template">
             <div data-bind="ifnot: neighbors() && neighbors().length > 0">
