--- a/resources/private/admin/index.html
+++ b/resources/private/admin/index.html
@@ -7,7 +7,7 @@
 
     <nav>
         <div class="breadcrumb">
-            <div class="tabs-container">
+            <div class="container">
                 <ul id="applicationTabs" class="tabs">
                     <li><a class="link-btn" href="#!/admin">XML-lataus</a></li>
                     <li><a class="link-btn" href="#!/users" data-test-id="users">K&auml;ytt&auml;j&auml;t</a></li>
